<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acceuil">

    <!--<TextView-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_width="318dp"-->
        <!--android:layout_height="43dp"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:text="@string/tv_acceuil"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="30sp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/id_btn_jouer"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <!--<Button-->
        <!--android:id="@+id/id_btn_gerer"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:text="@string/btn_gerer"-->
        <!--android:textSize="24sp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/id_btn_quitter"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.533"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/id_btn_jouer" />-->

    <!--<Button-->
        <!--android:id="@+id/id_btn_quitter"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:text="@string/btn_quitter"-->
        <!--android:textSize="24sp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.533"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/id_btn_gerer" />-->

    <!--<Button-->
        <!--android:id="@+id/id_btn_jouer"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:text="@string/btn_jouer"-->
        <!--android:textSize="24sp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/id_btn_gerer"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.533"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView"-->
        <!--app:layout_constraintVertical_bias="0.75" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/tv_acceuil"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="217dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/id_btn_jouer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btn_jouer" />

        <Button
            android:id="@+id/id_btn_gerer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btn_gerer" />

        <Button
            android:id="@+id/id_btn_quitter"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btn_quitter" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>